2-17-09: #1255, make software agreement dialog resizeable
2-17-09: move all phetcommon URLs to PhetCommonConstants
2-17-09: delete IStatistics, pass SessionMessage instance instead of odd reference to PhetApplicationConfig
2-17-09: #1238, add dialog for recommending PhET installer update (not wired up)
2-17-09: #1238, add "Check for PhET installer update" button to Update preferences panel
2-17-09: #1236, rename many update dialog classes to indicate that they pertain to "sims" versus "installer"
2-17-09: #1257, fix help menu, wrong critieria for deciding whether to add "Check for updates" menu item
2-17-09: replace "jar-launcher.properties" with constant throughout 
2-17-09: replace "javaws.user.language" and "javaws.user.country" with constants throughout 
2-16-09: #1247, move statistics startup stuff to StatisticsManager.applicationStarted
2-13-09: #1232, abstraction of software agreement version and content
2-13-09: #877, session counts feature only enabled when statistics are enabled
2-12-08: #1231, change About>OK to About>Close
2-12-08: #1225, make Software Use Agreement available from About dialog
2-9-09: #1120, major reorg of JARLauncher, show exceptions to the user via a dialog
2-9-09: #1120, consolidate properties files into jar-launcher.properties
2-4-09: #1192, make SessionMessage a singleton
2-3-09: #1191, remove "sim startup time" calculation
2-2-09: #1145, add support for version.timestamp, stored in project properties file, displayed in About dialog
2-2-09: #1086, add support for distribution.tag, stored in project properties file, displayed in About dialog
2-2-09: #1130, rewrite SessionsCounter, add sim_sessions_since support
1-28-09: #1087, add detection of phet dev, phet prod, other website to deployment scenarios
1-28-09: #1087, add additional FileUtils, fix getCodeSource
1-27-09: #1087, use singleton and Java 1.4 typesafe enum patterns to reimplement deployment scenario
1-27-09: #895, clean up initial sizing of license dialog