@@ -214,11 +214,7 @@ the amount of use of PhET simulations<br>\
 and to better server our users' needs.
 Common.statistics.enabled=Allow sending of information to PhET
 Common.statistics.details.title=Information
-Common.statistics.details.description=\
-<html>\
-The information shown below will be<br>\
-sent to PhET when the simulation starts.\
-</html>
+Common.statistics.details.description=<html>The information shown below will be sent to PhET when the simulation starts.</html>
 
 Common.softwareAgreement.title=Software Use & Privacy Agreement
 Common.softwareAgreement.accept=Accept and Continue
